--- a/app/src/main/res/layout/activity_justificacion.xml
+++ b/app/src/main/res/layout/activity_justificacion.xml
@@ -28,13 +28,13 @@
         android:layout_marginTop="16dp"
         android:text="@string/valTipoFalta"
         android:textColor="#FAFAFA"
-        app:layout_constraintEnd_toStartOf="@+id/idtvTipoFalta"
+        app:layout_constraintEnd_toStartOf="@+id/tvTipoFalta"
         app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/idtvTipoFalta"
+        android:id="@+id/tvTipoFalta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -94,29 +94,29 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnEnviar"
         android:layout_width="245dp"
         android:layout_height="56dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#EFD706"
-        android:text="Enviar"
+        android:text="@string/valtbtnEnviar"
         android:textColor="#F44336"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnMenu"
         android:layout_width="243dp"
         android:layout_height="61dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#EFD706"
-        android:text="Menu"
+        android:text="@string/valbtnMenu"
         android:textColor="#F44336"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/btnEnviar" />
 
     <TextView
         android:id="@+id/textView7"
@@ -131,13 +131,12 @@
         app:layout_constraintTop_toBottomOf="@+id/spFechaFalta" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/tvAsunto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
