actualizacion de ids

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -72,7 +72,7 @@
         tools:ignore="TextContrastCheck" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnMarcarAsis"
         android:layout_width="245sp"
         android:layout_height="56sp"
         android:layout_marginTop="20dp"
@@ -86,7 +86,7 @@
         tools:ignore="TextContrastCheck" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnCerrarSesion"
         android:layout_width="132dp"
         android:layout_height="51dp"
         android:layout_marginTop="128dp"
@@ -96,7 +96,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.077"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/btnMarcarAsis"
         tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
