--- a/app/src/main/res/layout/activity_justificacion.xml
+++ b/app/src/main/res/layout/activity_justificacion.xml
@@ -70,13 +70,14 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/valDescripcion"
         android:textColor="#FAFAFA"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
+        app:layout_constraintHorizontal_bias="0.165"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintTop_toBottomOf="@+id/tvAsunto" />
 
     <EditText
         android:id="@+id/tvDescripcion"
@@ -108,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />
 
     <Button
-        android:id="@+id/btnMenu"
+        android:id="@+id/btnMenu2"
         android:layout_width="243dp"
         android:layout_height="61dp"
         android:layout_marginTop="16dp"
