--- a/app/src/main/res/layout/activity_justificacion.xml
+++ b/app/src/main/res/layout/activity_justificacion.xml
@@ -17,6 +17,7 @@
         android:text="@string/valTitulo"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +29,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/valTipoFalta"
         android:textColor="#FAFAFA"
+        android:textSize="17sp"
         app:layout_constraintEnd_toStartOf="@+id/tvTipoFalta"
         app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +43,7 @@
         android:layout_marginEnd="120dp"
         android:text="@string/valResultTipoFalta"
         android:textColor="#FAFAFA"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -62,6 +65,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/valFechaFalta"
         android:textColor="#FAFAFA"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -98,7 +102,7 @@
     <Button
         android:id="@+id/btnEnviar"
         android:layout_width="238dp"
-        android:layout_height="49dp"
+        android:layout_height="61dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#EFD706"
         android:drawablePadding="5sp"
@@ -128,6 +132,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/valAsusnto"
         android:textColor="#FAFAFA"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,10 +145,11 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/spFechaFalta" />
+        app:layout_constraintTop_toBottomOf="@+id/spFechaFalta"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
