--- a/app/src/main/res/layout/activity_tareina.xml
+++ b/app/src/main/res/layout/activity_tareina.xml
@@ -109,7 +109,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvinasistencia" />
+        app:layout_constraintTop_toBottomOf="@+id/rvinasistencia"
+        tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/btnmenu"
@@ -124,6 +125,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btninasistencia" />
+        app:layout_constraintTop_toBottomOf="@+id/btninasistencia"
+        tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
