--- a/app/src/main/res/layout/activity_justificacion.xml
+++ b/app/src/main/res/layout/activity_justificacion.xml
@@ -40,8 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="120dp"
-        android:text="@string/valResultTipoFalta"
+        android:layout_marginEnd="148dp"
         android:textColor="#FAFAFA"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -151,5 +150,16 @@
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/spFechaFalta"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <TextView
+        android:id="@+id/tvtipofalta2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.346"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
