--- a/app/src/main/res/layout/activity_justificacion.xml
+++ b/app/src/main/res/layout/activity_justificacion.xml
@@ -31,7 +31,7 @@
         android:textColor="#FAFAFA"
         android:textSize="17sp"
         app:layout_constraintEnd_toStartOf="@+id/tvTipoFalta"
-        app:layout_constraintHorizontal_bias="0.652"
+        app:layout_constraintHorizontal_bias="0.805"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="148dp"
+        android:layout_marginEnd="204dp"
         android:textColor="#FAFAFA"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,9 +156,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
+        android:textColor="#FAFAFA"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.346"
+        app:layout_constraintHorizontal_bias="0.133"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent" />
 
