Consumo de Api Horarios
Consumo de Api Horarios

--- a/app/src/main/res/layout/activity_horarios.xml
+++ b/app/src/main/res/layout/activity_horarios.xml
@@ -47,13 +47,16 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvhorario"
-        android:layout_width="407dp"
-        android:layout_height="510dp"
+        android:id="@+id/rvhorarios"
+        android:layout_width="396dp"
+        android:layout_height="518dp"
         android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtfechah" />
+        app:layout_constraintTop_toBottomOf="@+id/txtfechah"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnvolver"
@@ -68,6 +71,6 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvhorario"
+        app:layout_constraintTop_toBottomOf="@+id/rvhorarios"
         tools:ignore="TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
