--- a/app/src/main/res/layout/horarios_card.xml
+++ b/app/src/main/res/layout/horarios_card.xml
@@ -9,15 +9,15 @@
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="386dp"
+        android:layout_height="75dp">
 
         <TextView
             android:id="@+id/txtaula"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="28dp"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,8 +26,8 @@
             android:id="@+id/txthoarios"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="76dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="28dp"
             android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/txtaula"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,10 +36,12 @@
             android:id="@+id/txtcurso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="28dp"
             android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/txthoarios"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
