--- a/app/src/main/res/layout/inasistecia_card.xml
+++ b/app/src/main/res/layout/inasistecia_card.xml
@@ -10,15 +10,15 @@
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="391dp"
+        android:layout_height="84dp">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginStart="104dp"
+            android:layout_marginTop="28dp"
             android:text="Fecha:"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="88dp"
-            android:layout_marginTop="53dp"
+            android:layout_marginTop="32dp"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
