Consumo de Apis Tardanza y Inasistencia
Consumo de Apis en Android Studio

--- a/app/src/main/res/layout/tardanza_card.xml
+++ b/app/src/main/res/layout/tardanza_card.xml
@@ -12,55 +12,43 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cvtardanzas"
-        android:layout_width="394dp"
-        android:layout_height="102dp">
+        android:layout_width="361dp"
+        android:layout_height="82dp">
+
+        <TextView
+            android:id="@+id/txtfecha2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="84dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
         <TextView
             android:id="@+id/txtfecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="104dp"
+            android:layout_marginStart="84dp"
+            android:layout_marginTop="16dp"
             android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/textView10"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/txthora"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="68dp"
-            android:layout_marginEnd="100dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/textView11"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/txtfecha2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="84dp"
-            android:layout_height="31dp"
-            android:layout_marginStart="48dp"
+            android:layout_width="167dp"
+            android:layout_height="22dp"
             android:layout_marginTop="16dp"
-            android:text="Fecha:"
-            android:textSize="20dp"
+            android:text="Fecha y Hora de Llegada"
+            android:textAlignment="center"
+            android:textSize="14sp"
             android:textStyle="bold|italic"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Hora de Llegada:"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/textView10"
-            tools:layout_editor_absoluteX="48dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
