--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -72,31 +72,42 @@
         tools:ignore="TextContrastCheck" />
 
     <Button
+        android:id="@+id/btnAsistencias"
+        android:layout_width="245sp"
+        android:layout_height="56sp"
+        android:layout_marginTop="16dp"
+        android:background="#EFD706"
+        android:text="@string/valtxtAsistencias"
+        android:textColor="#F44336"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTardInasis"
+        tools:ignore="TextContrastCheck" />
+
+    <Button
         android:id="@+id/btnMarcarAsis"
         android:layout_width="245sp"
         android:layout_height="56sp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:background="#EFD706"
         android:text="@string/valMarcar"
         android:textColor="#F44336"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnTardInasis"
+        app:layout_constraintTop_toBottomOf="@+id/btnAsistencias"
         tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/btnCerrarSesion"
         android:layout_width="132dp"
         android:layout_height="51dp"
-        android:layout_marginTop="128dp"
         android:background="#EFD706"
         android:text="@string/valCerrarSesion"
         android:textColor="#F44336"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.077"
+        app:layout_constraintHorizontal_bias="0.057"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMarcarAsis"
-        tools:ignore="TextContrastCheck" />
+        tools:ignore="TextContrastCheck"
+        tools:layout_editor_absoluteY="664dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
