Finalizacion de Consumo de Api Asistencia
Finalizacion de Consumo de Api Asistencia

--- a/app/src/main/res/layout/activity_horarios.xml
+++ b/app/src/main/res/layout/activity_horarios.xml
@@ -34,29 +34,16 @@
         app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txtfechah"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvhorarios"
-        android:layout_width="396dp"
-        android:layout_height="518dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/rvhorario"
+        android:layout_width="385dp"
+        android:layout_height="563dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtfechah"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.16" />
 
     <Button
         android:id="@+id/btnvolver"
@@ -71,6 +58,6 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvhorarios"
+        app:layout_constraintTop_toBottomOf="@+id/rvhorario"
         tools:ignore="TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
