--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -101,13 +101,14 @@
         android:id="@+id/btnCerrarSesion"
         android:layout_width="132dp"
         android:layout_height="51dp"
+        android:layout_marginTop="56dp"
         android:background="#EFD706"
         android:text="@string/valCerrarSesion"
         android:textColor="#F44336"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.057"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TextContrastCheck"
-        tools:layout_editor_absoluteY="664dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnMarcarAsis"
+        tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
