--- a/app/src/main/res/layout/tardanza_card.xml
+++ b/app/src/main/res/layout/tardanza_card.xml
@@ -16,38 +16,38 @@
         android:layout_height="150dp">
 
         <TextView
-            android:id="@+id/txthoraa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="72dp"
-            android:text="TextView"
+            android:id="@+id/txthora"
+            android:layout_width="126dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="100dp"
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.583"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textView13"
-            app:layout_constraintTop_toBottomOf="@+id/txtfechaa" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/txtfechaa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/txtfecha"
+            android:layout_width="125dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="52dp"
             android:layout_marginTop="28dp"
-            android:layout_marginEnd="72dp"
-            android:text="TextView"
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.591"
+            app:layout_constraintHorizontal_bias="0.033"
             app:layout_constraintStart_toEndOf="@+id/textView10"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="60dp"
-            android:layout_height="27dp"
-            android:layout_marginStart="88dp"
+            android:layout_width="71dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="52dp"
             android:layout_marginTop="28dp"
             android:text="Fecha:"
             android:textAlignment="center"
@@ -60,8 +60,8 @@
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="96dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginStart="68dp"
+            android:layout_marginTop="40dp"
             android:text="Hora:"
             android:textColor="#FFFFFF"
             android:textSize="22sp"
